tests/checker/ok/repetition_fixed.ow
Bit = Off + On

Byte = Bit^8

main = () -> Unit {
    "byte type defined".print()
}
