tests/checker/fail/mixed_worlds_main_and_handler.ow
use oneway/std/http/Headers
use oneway/std/http/Request
use oneway/std/http/Response
use oneway/std/http/Status

home = (Request) -> Response {
    Response(Headers(), Status(200))
}

main = () -> Unit {
    "ok".print()
}
